회원가입 및 로그인 구현 - password 암호화, jwt 토큰 생성, security 설정 추가

--- a/.gitignore
+++ b/.gitignore
@@ -285,4 +285,7 @@ gradle-app.setting
 **/front-end/node_modules/**
 **/front-end/static/**
 
+.env
+database.yaml
+
 # End of https://www.toptal.com/developers/gitignore/api/intellij,intellij+all,intellij+iml,gradle,java
