front-end 연동 - 이슈 수정

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ node {
 }
 
 task npmBuild(type: NpmTask) {
-    args = ['run', "build"]
+    args = ["run", "build"]
 }
 
 task copyFrontEnd(type: Copy) {
